<resources>
    <string name="app_name">Решала</string>
    <string name="but1">Квадрат декарта</string>
    <string name="but2">Лист баланса</string>
    <string name="but3">Монетка</string>
    <string name="but4">Колесо фортуны</string>
    <string name="but5">Расклад таро</string>
    <string name="but6">1d20</string>
    <string name="but7">О нас</string>
    <string name="butRu">RU</string>
    <string name="butEng">ENG</string>
    <string name="home"><u>домой</u></string>
    <string name="close"><u>close</u></string>
    <string name="infoMenu1">Последовательно ответьте на 4 вопроса, выставив уровень важности на каждую из причин и приложение рассчитает самый выгодный вариант решения вашей проблемы!</string>
    <string name="infoMenu2">Последовательно введите плюсы, а затем и минусы вашего решения, выставив уровень важности на каждый пункт и приложение рассчитает самый выгодный вариант решения вашей проблемы!</string>
    <string name="infoMenu3">Не знаешь какое решение принять? Подбрось монетку!</string>
    <string name="infoMenu4">Раскрути колесо решений и доверься госпоже Фортуне!</string>
    <string name="infoMenu5">Ничего не может быть лучше, чем положиться на карту, нарисованную незнакомым художником с обилием сюрреалистических символов. Но... Может быть именно эта карта изменит вашу жизнь?</string>
    <string name="infoMenu6">Бросьте двадцатигранный кубик из ДНД на удачу!</string>
    <string name="infoMenu7">Тут информация о нас</string>
    <string name="fortunaH">Ваше предсказание на сегодня:</string>
    <string name="infoOut1">Ясненько...</string>
    <string name="infoOut2">Я понял(а).</string>
    <string name="infoOut3">Отлично!</string>
    <string name="fortuna1">Cами Божества озаряют вас благословениями во всех ваших мирских делах!  Но, как мы знаем, успешность в жизни зависит только от вашего возможностей и трудолюбия, а не от внешних обстоятельств.  Вперед! Бросайтесь в омут и ожесточённо трудитесь, вас ждут непредсказуемые капиталистические высоты!</string>
    <string name="fortuna2">Насладитесь всеми прелестями нестабильности. Они приходят к вам, чтобы напомнить о том, что жизнь – это не только крутые успехи, но и искусство страдать и осложнять жизнь себе и окружающим.  Наслаждайтесь каждым мгновением беспорядка и станете мастером хаоса и анархии!</string>
    <string name="fortuna3">Когда ваши проблемы не решаются, ничего не может быть лучше, чем сидеть и мечтать о лучшем будущем вместо того, чтобы что-то предпринимать. Погружайтесь глубже в свой мир грез и позвольте себе насладиться  бесконечным путём самообмана и безрезультатных фантазий.</string>
    <string name="fortuna4">Сжигайте мосты, обрубайте возможности и горите ярче всех! Получайте удовольствие от эмоциональных срывов всем своим существом и довольствуйтесь крохами, оставшимися после пламени.</string>
    <string name="fortuna5">Откройте глаза и вы увидите важные вещи: вода окажется мокрой, огонь горячим, а снег белым. Попробуйте посмотреть на всё это под другим углом и может быть вы найдёте свою истину в вине.</string>
    <string name="fortuna6">Наденьте свой плащ супергероя и никто уже не сможет вам помешать! И не забывайте, что рандомные символы на рисунке — самый надежный способ справиться со всеми проблемами</string>
    <string name="fortuna7">Просто посмотрите на это сообщение и все ваши проблемы просто растворятся в воздухе! Так что поверьте в себя и  позвольте себе пройти к вершине успеха</string>
    <string name="fortuna8">Просто читайте этот текст и cразу же становитесь лучшей версией себя! Вопрос лишь в том, сколько сил и времени вы готовы вложить, чтобы достичь желаемого результата. А символы на рисунке - это всего лишь напоминание о том, что наша судьба зависит от нас самих, а не от волшебных колёс.</string>
    <string name="butFortuna">КРУТИТЬ</string>
    <string name="butMoney">ПОДКИНУТЬ</string>
    <string name="butTaro">ТЯНУТЬ</string>
    <string name="butDnd">КИНУТЬ</string>
    <string name="taro1">Cимволизирует контроль, силу воли, решительность, успех, действие — как же впечатляюще! Мы все знаем, что с этими качествами, любой добьётся чего угодно! А вот перевернутый вариант: отсутствие контроля, противодействие, отсутствие направления и самодисциплины — вот это, безусловно, настоящее искусство. Уж лучше сидеть сложа руки, чем затевать выматывающую перестройку себя и развитие личностных качеств! Ощутите эту мотивацию, амбициозность и контроль! Но будьте внимательны, чтобы не сбиться с пути: жизнь ведь такая скука без здоровой доли страха и сомнений!</string>
    <string name="taro2">Символизирует так называемое «задумчивое сидение на полу», где мысли сжирают тебя изнутри, а расплата за вашу самонадеянность стучит в дверь. \n \n Пробуждение? Возрождение? Это всё слишком возвышенно. \n \n Давайте просто признаем, что мы все жертвы собственных иллюзий, особенно когда речь идет о ошибках, которые, казалось бы, давно забыты, но вечно возвоащаются, как надоедливая реклама. \n \n Сейчас идеальный момент задуматься, соответствуют ли ваши действия вашим ценностям или они являются просто вонючим компромиссом?\n \n Вопрос от Достоевского: тварь вы дрожащая или право имеете?! \n \n Найдите время, чтобы узнать себя, прежде чем снова включить этот режим «бегущего человека». \n \n И не забывайте, что \n\n "Ты колесо себе сделал сам \n\n И костюм белки-бегуна сам для себя сшил, \n\n Чтоб в сутки 24 часа \n\nГнаться за призом призрачным, что есть сил" - Noize MC</string>
    <string name="taro3">Эта карта превосходно символизирует то, что все хорошее когда-то заканчивается, а вы — прямо в очереди на психотерапию. Обновление, осознание -  это всего лишь способ переключения канала, когда ваша жизнь начинает напоминать заезженную пластинку. Мощное движение? Только постарайтесь, что бы оно не закончилось привычным «два шага вперед, три шага назад». Карта Смерти - как издевка судьбы: да, заканчивается одна глава, но не спешите убирать старые записи — они все равно понадобятся, когда вы начнете снова и снова ворошить неудачи. И только вам решать, какая страница будет следующей - новая глава? Хорошая стабильность? Или просто новая порция старого ржавого хлама?</string>
    <string name="taro4">Как же уютно в ловушке! Любая зависимость и депрессия — это, по сути, рай для ленивых умов, где негативное мышление становится стилем жизни. Предательство? Пф, просто еще один штрих к портрету страдальца. Дьявол — ваш лучший друг, не правда ли? Хотя вы по идее и владеете своей жизнью, он с удовольствием подсказывает вам ваши привычки. Даже спорт и социальные сети превращаются в его коварные щупальца, если не следить за мерой. Но не падайте духом! Главное, сохранив чувство юмора, перенаправьте свои желания на что-то более важное, например, выбор громкости своих страданий.</string>
    <string name="taro5">У вас есть авторитет — фигура отца. Данный человек прекрасно контролирует свои эмоции и заслуживает доверия. Он и сам не упускает возможности продемонстрировать "мужскую энергию", представляя собой образцовую отцовскую фигуру. Ура, ваша уложенная на диван попа может спать спокойно - ведь над нами нависает отец. А то, что он, возможно не такой как вы мечтали - этот выбор изначчально сделали вы.</string>
    <string name="taro6">Императрица с короной как бы намекает: ищите красоту и счастье в своей жизни. Но, похоже, она забыла уточнить, что за этим поиском вам, возможно, придётся бросаться перьями на голове и взмахивать волшебной палочкой, чтобы хоть что-то зацепить. Продолжайте искать, дорогие! Вдруг за совпадением случайностей найдётся и та самая искра радости в самых дебрях вашей заросшей души.</string>
    <string name="taro7">Cудьба, рок и карма – просто идеальный коктейль для тех, кто любит сидеть на диване и ждать, пока удача сама постучит в вашу дверь. Если выпала данная карта - считайте, вам повезло! Верите в судьбу – прекрасно, нет – тоже замечательно. Прислушивайтесь к своим экстрасенсорным способностям – или просто к интуиции, если вы не слишком изощрены в эзотерике. Однако "Только помни, сколько бы ты не предпринимал, что дальше - Мир всегда найдет, где выбросить тебе аркан постарше" - Asper X \n Воплощайте свои мечты, словно у вас есть на это силы, и у вас есть защитники на небесах. Помните, бояться нечего – все будет идти своим чередом благодаря божественному вмешательству и тайному плану, о котором никто не в курсе.</string>
    <string name="taro8">Отпускание ситуации, жертвование, пауза для размышлений, неуверенность, духовное развитие… О, какие же утешительные термины для описания нашего пребывания в центре его величества Застоя! Как приятно знать, что в этот короткий миг стоим на пороге просветления, ожидая, когда же нас, наконец, стукнет озарение, и выплюнет бездна самокопания. Повешенный – это та волшебная «выжидательная карта», где время останавливается, а мы делаем хорошую мину при плохой игре. Мы можем и не радоваться этому подвешенному состоянию, но кто  отказался бы от возможности посидеть без дела, попивая эликсир страха перед жизнью? В конце концов, разве не замечательно жертвовать своими мечтами и связями, оставаясь на месте?</string>
    <string name="taro9">Вы -  благородный искатель мудрости, который прячется в пещерах своих мыслей, надеясь найти там какую-то душещипательную истину. Уединение? Да, конечно,когда не знаешь как сказать «я одинок» без поэтического налета. И духовное просветление, приходящиее при долгом плевании в потолок, ведь что может быть более просветляющим, чем бесконечное созерцание пыли? Отшельник – это просто шутка природы! Он символизирует мудрость, заработанную встречами с самыми далёкими и не менее одинокими уголками своей души. Девиз данной карты: «Чем ближе к себе, тем дальше от всего мира!» Очень, между прочим удобно! Вот только нужно ли это вам?</string>
    <string name="taro10">Шут — символизирует тот самый оптимизм, который с присущей ему наивностью шагает по жизни, словно по зеленым лужайкам на радуге, вообще не понимая, что за каждой радугой может скрываться болото. Каждый день для такого человека — это заковыристое приключение с неизменным хэппи-эндом, словно он выдернул из шляпы фокусника счастливый билет. А те, кто полагают,  то «розовые очки» каким-то образом помешают пришедшим на ум трудностям  - в корне не правы. Ведь все мы знаем, что жизнь - это всего лишь игра разных уровней сложности. Но будь спокоен, ведь «дуракам везет» — вы выберетесь из всех авантюр, прихватив с собой уроки, о которых никто даже не подозревает.</string>
    <string name="taro11">Справедливость! Этот термин звучит как фентезийная игра! Которая о честности, о справедливом законе и жизни, где всё происходит по прописанным правилам. Но разве не забавно, что реальность часто крадет эти правила и прячет их под своим диваном? И вот, как по волшебству, появляются причины и следствия, а жизненные уроки для всех нас – становятся истинной находкой для искателей справедливости!</string>
    <string name="onas1">Приветствую!</string>
    <string name="onas2">Mеня зовут Дилан и я начинающий разработчик приложений.</string>
    <string name="onas3">Я очень надеюсь на то, что вам понравилось моё первое приложение :)</string>
    <string name="onas4">Отдельное спасибо хочу сказать Рисе Свон, отрисовавшей все картинки к данному приложению.</string>
    <string name="onas5">Поддержать проект можно на boosty:</string>
    <string name="onas6">Жду у себя, там много интересного:</string>
    <string name="butAdd">ДОБАВИТЬ</string>
    <string name="placIn">Введите пункт</string>
    <string name="textIn1">На сколько вам важен данный пункт?</string>
    <string name="textIn2">1 - совсем не важно, 5 - очень важно</string>
    <string name="textIn3">Выбрана важность:</string>
</resources>