<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"
    android:padding="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editAdd"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="@drawable/button"
            android:textColorHint="#8D8C86"
            android:hint="@string/placIn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="29sp"
            android:background="@color/transparent"
            android:text="@string/textIn1"/>

        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:background="@color/transparent"
            android:text="@string/textIn2"/>
        <TextView
            android:id="@+id/textR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:background="@color/transparent"
            android:text="@string/textIn3"/>
        <Button
            android:id="@+id/positiv_but"
            android:background="@drawable/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/button_color"
            android:textSize="29sp"
            android:text="@string/butAdd" />

        <TextView
            android:id="@+id/close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:background="@color/transparent" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>